--- a/scroll/internal/formal/package.html
+++ b/scroll/internal/formal/package.html
@@ -49,8 +49,12 @@
       
           <div id="comment" class="fullcommenttop"><div class="comment cmt"><p>This package contains the Scala reference implementation of the role-based modeling language for Compartment Role Object Models (CROM)
 and Compartment Role Object Instances (CROI), as well as Constraint Models. The implementation is kept simple, comprehensive, and more
-importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:</p><ul><li><a href="CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model</li><li><a href="CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance</li><li><a href="FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group</li><li><a href="FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
-</li></ul></div><div class="toggleContainer block">
+importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:
+- <a href="CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model
+- <a href="CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance
+- <a href="FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group
+- <a href="FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
+</p></div><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div></div>
