--- a/scroll/internal/graph/package.html
+++ b/scroll/internal/graph/package.html
@@ -89,26 +89,25 @@
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="scroll.internal.graph.RoleGraph" visbl="pub" data-isabs="true" fullComment="yes" group="Ungrouped">
-      <a id="RoleGraph[N]extendsAnyRef"></a>
-      <a id="RoleGraph[N]:RoleGraph[N]"></a>
+              <ol><li name="scroll.internal.graph.RoleGraph" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
+      <a id="RoleGraphextendsAnyRef"></a>
+      <a id="RoleGraph:RoleGraph"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">trait</span>
       </span>
       <span class="symbol">
-        <a href="RoleGraph.html"><span class="name">RoleGraph</span></a><span class="tparams">[<span name="N">N</span>]</span><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+        <a href="RoleGraph.html"><span class="name">RoleGraph</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.graph.package@RoleGraph[N]extendsAnyRef" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.graph.package@RoleGraphextendsAnyRef" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
-      <p class="shortcomment cmt">Trait defining an generic interface for all kind of role graphs.</p><div class="fullcomment"><div class="comment cmt"><p>Trait defining an generic interface for all kind of role graphs.
-</p></div><dl class="paramcmts block"><dt class="tparam">N</dt><dd class="cmt"><p>Type of roles as Nodes</p></dd></dl></div>
+      <p class="shortcomment cmt">Trait defining an generic interface for all kind of role graphs.</p>
     </li><li name="scroll.internal.graph.ScalaRoleGraph" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="ScalaRoleGraphextendsRoleGraph[Any]"></a>
+      <a id="ScalaRoleGraphextendsRoleGraph"></a>
       <a id="ScalaRoleGraph:ScalaRoleGraph"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -116,10 +115,10 @@
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="ScalaRoleGraph.html"><span class="name">ScalaRoleGraph</span></a><span class="result"> extends <a href="RoleGraph.html" class="extype" name="scroll.internal.graph.RoleGraph">RoleGraph</a>[<span class="extype" name="scala.Any">Any</span>]</span>
+        <a href="ScalaRoleGraph.html"><span class="name">ScalaRoleGraph</span></a><span class="result"> extends <a href="RoleGraph.html" class="extype" name="scroll.internal.graph.RoleGraph">RoleGraph</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.graph.package@ScalaRoleGraphextendsRoleGraph[Any]" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.graph.package@ScalaRoleGraphextendsRoleGraph" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
