--- a/scroll/internal/package.html
+++ b/scroll/internal/package.html
@@ -91,7 +91,7 @@ implementing an objectified collaboration with a limited number of participating
         <div id="types" class="types members">
               <h3>Type Members</h3>
               <ol><li name="scroll.internal.Compartment" visbl="pub" data-isabs="true" fullComment="yes" group="Ungrouped">
-      <a id="CompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithQueryStrategieswithUnionTypes.RoleUnionTypes"></a>
+      <a id="CompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithQueryStrategieswithUnionTypes.RoleUnionTypeswithCoroutines"></a>
       <a id="Compartment:Compartment"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -99,10 +99,10 @@ implementing an objectified collaboration with a limited number of participating
         <span class="kind">trait</span>
       </span>
       <span class="symbol">
-        <a href="Compartment.html"><span class="name">Compartment</span></a><span class="result"> extends <a href="support/RoleConstraints.html" class="extype" name="scroll.internal.support.RoleConstraints">RoleConstraints</a> with <a href="support/RoleRestrictions.html" class="extype" name="scroll.internal.support.RoleRestrictions">RoleRestrictions</a> with <a href="support/RoleGroups.html" class="extype" name="scroll.internal.support.RoleGroups">RoleGroups</a> with <a href="support/Relationships.html" class="extype" name="scroll.internal.support.Relationships">Relationships</a> with <a href="support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a> with <a href="support/UnionTypes$$RoleUnionTypes.html" class="extype" name="scroll.internal.support.UnionTypes.RoleUnionTypes">RoleUnionTypes</a></span>
+        <a href="Compartment.html"><span class="name">Compartment</span></a><span class="result"> extends <a href="support/RoleConstraints.html" class="extype" name="scroll.internal.support.RoleConstraints">RoleConstraints</a> with <a href="support/RoleRestrictions.html" class="extype" name="scroll.internal.support.RoleRestrictions">RoleRestrictions</a> with <a href="support/RoleGroups.html" class="extype" name="scroll.internal.support.RoleGroups">RoleGroups</a> with <a href="support/Relationships.html" class="extype" name="scroll.internal.support.Relationships">Relationships</a> with <a href="support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a> with <a href="support/UnionTypes$$RoleUnionTypes.html" class="extype" name="scroll.internal.support.UnionTypes.RoleUnionTypes">RoleUnionTypes</a> with <a href="support/Coroutines.html" class="extype" name="scroll.internal.support.Coroutines">Coroutines</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../index.html#scroll.internal.package@CompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithQueryStrategieswithUnionTypes.RoleUnionTypes" title="Permalink" target="_top">
+      <a href="../../index.html#scroll.internal.package@CompartmentextendsRoleConstraintswithRoleRestrictionswithRoleGroupswithRelationshipswithQueryStrategieswithUnionTypes.RoleUnionTypeswithCoroutines" title="Permalink" target="_top">
         <img src="../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -214,8 +214,12 @@ via the <a href="ecore/ECoreImporter.html" class="extype" name="scroll.internal.
       <p class="shortcomment cmt">This package contains the Scala reference implementation of the role-based modeling language for Compartment Role Object Models (CROM)
 and Compartment Role Object Instances (CROI), as well as Constraint Models.</p><div class="fullcomment"><div class="comment cmt"><p>This package contains the Scala reference implementation of the role-based modeling language for Compartment Role Object Models (CROM)
 and Compartment Role Object Instances (CROI), as well as Constraint Models. The implementation is kept simple, comprehensive, and more
-importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:</p><ul><li><a href="formal/CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model</li><li><a href="formal/CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance</li><li><a href="formal/FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group</li><li><a href="formal/FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
-</li></ul></div></div>
+importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:
+- <a href="formal/CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model
+- <a href="formal/CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance
+- <a href="formal/FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group
+- <a href="formal/FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
+</p></div></div>
     </li><li name="scroll.internal.graph" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="graph"></a>
       <a id="graph:graph"></a>
