--- a/scroll/internal/support/package.html
+++ b/scroll/internal/support/package.html
@@ -90,7 +90,24 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="scroll.internal.support.DispatchQuery" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+              <ol><li name="scroll.internal.support.Coroutines" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
+      <a id="CoroutinesextendsAnyRef"></a>
+      <a id="Coroutines:Coroutines"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">trait</span>
+      </span>
+      <span class="symbol">
+        <a href="Coroutines.html"><span class="name">Coroutines</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#scroll.internal.support.package@CoroutinesextendsAnyRef" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <p class="shortcomment cmt">Allows to use coroutines in your compartment.</p>
+    </li><li name="scroll.internal.support.DispatchQuery" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="DispatchQueryextendsAnyRef"></a>
       <a id="DispatchQuery:DispatchQuery"></a>
       <h4 class="signature">
