--- a/scroll/internal/util/package.html
+++ b/scroll/internal/util/package.html
@@ -132,7 +132,7 @@ to access common tasks for working with reflections.</p>
 
         <div id="values" class="values members">
               <h3>Value Members</h3>
-              <ol><li name="scroll.internal.util.Log" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+              <ol><li name="scroll.internal.util.Log" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Log"></a>
       <a id="Log:Log"></a>
       <h4 class="signature">
@@ -148,9 +148,7 @@ to access common tasks for working with reflections.</p>
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
-      <p class="shortcomment cmt">Very simple logging utility.</p><div class="fullcomment"><div class="comment cmt"><p>Very simple logging utility. Simply set the DEBUG flag
-and show logging message to STDOUT via info().
-</p></div></div>
+      <p class="shortcomment cmt">Very simple logging utility using slf4j.</p>
     </li><li name="scroll.internal.util.Many" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Many"></a>
       <a id="Many:Many"></a>
